styles.css
/* ... */
.button:hover {
  background-color: rgba(0,0,0,0.1);

}

.button:active {
  background-color: rgba(0,0,0,0.15);
  color: #333;
}

.button i {
  font-size: 16px;
}

.hide-button {
  cursor: pointer;
  padding: 6px 4px 8px 4px;
  border-left: 1px solid #2c2c2c;
  border-bottom: 1px solid #2c2c2c;
  position: fixed;
  right: 0px;
  background: #1a1a1a;
  color: #eee;
  font: 11px 'Lucida Grande', sans-serif;
  display: table;
}

/* Header */

.github-link {
  width: 60px;
  height: 60px;
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  z-index: 1000;
}

.github-link .bg {
  fill: #fff;
  fill-opacity: 0.2;
}

.github-link:hover .bg {
  fill-opacity: 0.3;
}

.github-link .icon {
  fill: #fff;
  fill-opacity: 0.6;
}

.github-link:hover .icon {
  fill-opacity: 0.7;
}

header {
  border-bottom: solid 1px rgba(0,0,0,0.4);
  background-color: #183D4E;
  color: white;
  overflow: hidden;
  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
  position: relative;
}

header h1 {
  font-size: 30px;
  text-align: center;
  margin-top: 30px;
  margin-bottom: 30px;
  -webkit-font-smoothing: antialiased;
}

header h1 .optional {
  display: none;
}

@media (min-width: 1064px) {
  header h1 .optional {
    display: inline;
  }
}

@media (min-height: 700px) {
  header h1 {
    margin-top: 40px;
    margin-bottom: 40px;
  }
}

@media (min-height: 800px) {
  header h1 {
    font-size: 34px;
    margin-top: 60px;
    margin-bottom: 60px;
  }
}

/* Top Controls */

#top-controls {
  border-bottom: 1px solid #ddd;
  padding: 18px 0;
  box-shadow: 0 1px 4px rgba(0,0,0,0.08);
  background: white;
}

@media (min-height: 700px) {
  #top-controls {
    padding: 24px 0;
  }
}

#top-controls .container {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-justify-content: space-betweenspace-between;
  justify-content: space-between;
}

#top-controls .timeline-controls {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  margin-right: 20px;
  width: 140px;
}

#play-pause-button .material-icons {
  color: white;
  font-size: 36px;
  transform: translate(-18px,-12px);
}


#play-pause-button .material-icons:nth-of-type(2) {
  display: none;
}

#play-pause-button.playing .material-icons:nth-of-type(1) {
  display: none;
}

#play-pause-button.playing .material-icons:nth-of-type(2) {
  display: inherit;
}

#top-controls .control {
  flex-grow: 1;
  max-width: 180px;
  min-width: 110px;
  margin-left: 30px;
  margin-top: 6px;
}

#top-controls .control .label,
#top-controls .control label {
  color: #777;
  font-size: 13px;
  display: block;
  margin-bottom: 6px;
  font-weight: 300;
}

#top-controls .control .value {
  font-size: 24px;
  margin: 0;
  font-weight: 300;
}

#top-controls .control .select {
  position: relative;
}

#top-controls .control select {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  background: none;
  border: none;
  border-radius: 0;
  padding: 6px 0;
  width: 100%;
  font-size: 14px;
  border-bottom: solid 1px #ccc;
  color: #333;
  outline: none;
}

#top-controls .control select:focus {
  border-bottom-color: #183D4E;
}

#top-controls .control .select::after {
  class: "material-icons";
  content: "arrow_drop_down";
  color: #999;
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 18px;
  line-height: 1;
  letter-spacing: normal;
  text-transform: none;
  display: inline-block;
  white-space: nowrap;
  word-wrap: normal;
  direction: ltr;
  position: absolute;
  right: 0;
  top: 6px;
  pointer-events: none;
}

/* Hover card */
#hovercard {
  display: none;
  position: absolute;
  padding: 5px;
  border: 1px solid #aaa;
  z-index: 1000;
  background: #fff;
  cursor: default;
  border-radius: 5px;
  left: 240px;
  width: 150px;
  top: -20px;
}

#hovercard input {
  width: 60px;
}

/* Main Part*/

#main-part {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-top: 30px;
  margin-bottom: 50px;
  padding-top: 2px;
  position: relative;
}

@media (min-height: 700px) {
  #main-part {
    margin-top: 50px;
  }
}

#main-part h4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  font-weight: 400;
  font-size: 16px;
  text-transform: uppercase;
  position: relative;
  padding-bottom: 8px;
  margin: 0;
  line-height: 1.4em;
}

#main-part p,
#main-part .column .label,
#main-part .column label {
  font-weight: 300;
  line-height: 1.38em;
  margin: 0;
  color: #777;
  font-size: 13px;
}

.more {
  position: absolute;
  left: 50%;
}

.more button {
  position: absolute;
  left: -28px;
  top: -28px;
  background: white;
}

.more button:hover,
.more button:active,
.more button:focus,
.more button:focus:not(:active) {
  background: white;
}

svg text {
  dominant-baseline: middle;
}

canvas {
  display: block;
}

.link {
  fill: none;
  stroke: #aaa;
  stroke-width: 1;
}

g.column rect {
  stroke: none;
}

#heatmap {
  position: relative;
  float: left;
  margin-top: 10px;
}

#heatmap .tick line {
  stroke: #ddd;
}

#heatmap .tick text {
  fill: #bbb;
  dominant-baseline: auto;
}

#heatmap .tick:nth-child(7) text {
  fill: #333;
}

#heatmap .tick:nth-child(7) line {
  stroke: #999;
}

/* Data column */

.vcenter {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
}

.data.column {
  width: 10%;
}

.data.column .dataset-list {
  margin: 20px 0 10px;
  overflow: hidden;
}

.data.column .dataset {
  position: relative;
  float: left;
  width: 34px;
  height: 34px;
  margin: 0 14px 14px 0;
}

.data.column .dataset:nth-of-type(2n) {
  margin-right: 0;
}
/* ... */

